testing userResource