@@ -10,6 +10,7 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/user")
@@ -31,7 +32,7 @@ public class UserResource {
     @GetMapping
     public ResponseEntity<List<UserDTO>> findAll() {
         return ResponseEntity.ok().body(
-                userService.findAll().stream().map(x -> modelMapper.map(x, UserDTO.class)).toList());
+                userService.findAll().stream().map(x -> modelMapper.map(x, UserDTO.class)).collect(Collectors.toList()));
     }
 
     @PostMapping
